Init: golang clean architecture template project
