# internal/adapter/delivery/http/dto/dto.go
@@ -1,0 +1,41 @@
+package dto
+
+type UserSignUp struct {
+	Username string `json:"username" binding:"required,min=3,max=15"`
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=5,max=25"`
+}
+
+type LoginBody struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=5,max=25"`
+}
+
+type Response struct {
+	Status  int         `json:"status"`
+	Message string      `json:"message"`
+	Error   interface{} `json:"error,omitempty"`
+	Data    interface{} `json:"data,omitempty"`
+}
+
+func ErrorResponse(status int, message string, err string, data interface{}) Response {
+	return Response{
+		Status:  status,
+		Message: message,
+		Error:   err,
+		Data:    data,
+	}
+}
+
+func SuccessResponse(status int, message string, data interface{}) Response {
+	return Response{
+		Status:  status,
+		Message: message,
+		Data:    data,
+	}
+}
+
+type TokenResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
